[package]
name = "wpp"
version = "0.1.0"
edition = "2021"
authors = ["dowell <dowell@funxdata.com>"]
description = "wpp rust sdk"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dytescn/wpp.git"
keywords = ["wps", "wpp"] # 推荐
categories = ["graphics"] 

[dependencies]
dyteslogs = "0.1.0"
wincom = "0.1.0"
windows = { version = "0.52", features = [
        "Win32_System_Com",
        "Data_Xml_Dom",
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Shell",
        "Win32_System_Ole",
        "Win32_System_Variant",
]}